--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,8 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!-- <a href="/sitemap/"> -->
+    <!-- Sitemap -->
+<!-- </a> -->
+<a href="https://clustrmaps.com/site/1c091" title="Visit tracker">
+    <img src="//www.clustrmaps.com/map_v2.png?d=KG_6ILZ5dgoeo2sddYFDXs8HNDWfeGTRgeLFq2v3R2k&cl=ffffff" width="1" height="1">
+</a>
 <!-- end custom footer snippets -->
